# tf-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  sitecustomize.py
docs/: FANOUT.md
examples/: fanout-template.json
src/tinyfish_cli/: __main__.py  builtin_suites.py  cli.py  client.py  config.py  errors.py  fanout.py  formatting.py  run_ops.py  suite_runner.py
tests/: test_aliases.py  test_fanout.py  test_payloads.py  test_sse.py  test_suites.py
