[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyfish-cli"
version = "0.1.0"
description = "Agent-friendly TinyFish CLI built from the public API docs and OpenAPI spec."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Luis Marte" }
]
keywords = ["tinyfish", "cli", "automation", "browser", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/lmarte17/tf-cli"
Documentation = "https://github.com/lmarte17/tf-cli#readme"
Source = "https://github.com/lmarte17/tf-cli"
Issues = "https://github.com/lmarte17/tf-cli/issues"
"TinyFish Docs" = "https://docs.tinyfish.ai/api-reference/automation/run-browser-automation-with-sse-streaming"

[project.scripts]
tinyfish = "tinyfish_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
